Convert print statements to assertions.

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -67,10 +67,10 @@
     "    utilities_flexbox_and_grid --> builders_scales\n",
     "    utilities_layout --> core_base\n",
     "    utilities_layout --> builders_scales\n",
-    "    utilities_sizing --> core_base\n",
     "    utilities_sizing --> builders_scales\n",
-    "    utilities_spacing --> core_base\n",
+    "    utilities_sizing --> core_base\n",
     "    utilities_spacing --> builders_scales\n",
+    "    utilities_spacing --> core_base\n",
     "```\n",
     "\n",
     "*10 cross-module dependencies detected*"
@@ -196,10 +196,7 @@
     "            self,\n",
     "            prefix: str  # The utility prefix (e.g., 'w' for width, 'p' for padding)\n",
     "        )\n",
-    "        \"Initialize with a utility prefix.\n",
-    "\n",
-    "Args:\n",
-    "    prefix: The utility prefix (e.g., 'w' for width, 'p' for padding)\"\n",
+    "        \"Initialize with a utility prefix.\"\n",
     "    \n",
     "    def build(\n",
     "            self,\n",
