--- a/nbs/utilities/layout.ipynb
+++ b/nbs/utilities/layout.ipynb
@@ -106,42 +106,24 @@
    "execution_count": null,
    "id": "e9e297ae-b869-4780-a755-793c77df5ecb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "block\n",
-      "inline\n",
-      "flex\n",
-      "grid\n",
-      "hidden\n",
-      "inline-flex\n",
-      "table\n",
-      "table-row\n",
-      "table-cell\n",
-      "sr-only\n",
-      "not-sr-only\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test display utilities with dot notation\n",
-    "print(display.block)          # block\n",
-    "print(display.inline)         # inline\n",
-    "print(display.flex)           # flex\n",
-    "print(display.grid)           # grid\n",
-    "print(display.hidden)         # hidden\n",
-    "print(display.inline_flex)    # inline-flex\n",
+    "assert display.block == \"block\"\n",
+    "assert display.inline == \"inline\"\n",
+    "assert display.flex == \"flex\"\n",
+    "assert display.grid == \"grid\"\n",
+    "assert display.hidden == \"hidden\"\n",
+    "assert display.inline_flex == \"inline-flex\"\n",
     "\n",
     "# Table display utilities\n",
-    "print(display.table)          # table\n",
-    "print(display.table_row)      # table-row\n",
-    "print(display.table_cell)     # table-cell\n",
+    "assert display.table == \"table\"\n",
+    "assert display.table_row == \"table-row\"\n",
+    "assert display.table_cell == \"table-cell\"\n",
     "\n",
     "# Special utilities\n",
-    "print(sr_only)               # sr-only\n",
-    "print(not_sr_only)           # not-sr-only"
+    "assert sr_only == \"sr-only\"\n",
+    "assert not_sr_only == \"not-sr-only\""
    ]
   },
   {
@@ -178,26 +160,14 @@
    "execution_count": null,
    "id": "449df6b0-0777-426c-8a40-ad5d4faa7f41",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "static\n",
-      "relative\n",
-      "absolute\n",
-      "fixed\n",
-      "sticky\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test position utilities with dot notation\n",
-    "print(position.static)      # static\n",
-    "print(position.relative)    # relative\n",
-    "print(position.absolute)    # absolute\n",
-    "print(position.fixed)       # fixed\n",
-    "print(position.sticky)      # sticky"
+    "assert position.static == \"static\"\n",
+    "assert position.relative == \"relative\"\n",
+    "assert position.absolute == \"absolute\"\n",
+    "assert position.fixed == \"fixed\"\n",
+    "assert position.sticky == \"sticky\""
    ]
   },
   {
@@ -274,44 +244,25 @@
    "execution_count": null,
    "id": "983801f8-e29d-4362-b87a-fc9bbc31a9bd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "inset-0\n",
-      "inset-4\n",
-      "inset-1/2\n",
-      "inset-auto\n",
-      "inset-full\n",
-      "-inset-4\n",
-      "inset-x-4\n",
-      "inset-y-8\n",
-      "top-0\n",
-      "right-4\n",
-      "bottom-auto\n",
-      "-left-2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test inset utilities\n",
-    "print(inset(0))               # inset-0\n",
-    "print(inset(4))               # inset-4\n",
-    "print(inset(\"1/2\"))           # inset-1/2\n",
-    "print(inset.auto)             # inset-auto\n",
-    "print(inset.full)             # inset-full\n",
-    "print(inset.negative(4))      # -inset-4\n",
+    "assert str(inset(0)) == \"inset-0\"\n",
+    "assert str(inset(4)) == \"inset-4\"\n",
+    "assert str(inset(\"1/2\")) == \"inset-1/2\"\n",
+    "assert str(inset.auto) == \"inset-auto\"\n",
+    "assert str(inset.full) == \"inset-full\"\n",
+    "assert str(inset.negative(4)) == \"-inset-4\"\n",
     "\n",
     "# Test directional inset\n",
-    "print(inset.x(4))             # inset-x-4\n",
-    "print(inset.y(8))             # inset-y-8\n",
+    "assert str(inset.x(4)) == \"inset-x-4\"\n",
+    "assert str(inset.y(8)) == \"inset-y-8\"\n",
     "\n",
     "# Test individual directions\n",
-    "print(top(0))                 # top-0\n",
-    "print(right(4))               # right-4\n",
-    "print(bottom.auto)            # bottom-auto\n",
-    "print(left.negative(2))       # -left-2"
+    "assert str(top(0)) == \"top-0\"\n",
+    "assert str(right(4)) == \"right-4\"\n",
+    "assert str(bottom.auto) == \"bottom-auto\"\n",
+    "assert str(left.negative(2)) == \"-left-2\""
    ]
   },
   {
@@ -367,34 +318,19 @@
    "execution_count": null,
    "id": "9d9678b0-46b7-4fcb-bef9-31306e4f0072",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "overflow-auto\n",
-      "overflow-hidden\n",
-      "overflow-visible\n",
-      "overflow-x-auto\n",
-      "overflow-y-scroll\n",
-      "overflow-x-visible\n",
-      "overflow-y-visible\n",
-      "overflow-y-clip\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test overflow utilities\n",
-    "print(overflow.auto)         # overflow-auto\n",
-    "print(overflow.hidden)       # overflow-hidden\n",
-    "print(overflow.visible)      # overflow-visible\n",
+    "assert overflow.auto == \"overflow-auto\"\n",
+    "assert overflow.hidden == \"overflow-hidden\"\n",
+    "assert overflow.visible == \"overflow-visible\"\n",
     "\n",
     "# Directional overflow utilities\n",
-    "print(overflow.x.auto)       # overflow-x-auto\n",
-    "print(overflow.y.scroll)     # overflow-y-scroll\n",
-    "print(overflow.x.visible)    # overflow-x-visible\n",
-    "print(overflow.y.visible)    # overflow-y-visible\n",
-    "print(overflow.y.clip)       # overflow-y-clip"
+    "assert overflow.x.auto == \"overflow-x-auto\"\n",
+    "assert overflow.y.scroll == \"overflow-y-scroll\"\n",
+    "assert overflow.x.visible == \"overflow-x-visible\"\n",
+    "assert overflow.y.visible == \"overflow-y-visible\"\n",
+    "assert overflow.y.clip == \"overflow-y-clip\""
    ]
   },
   {
@@ -435,32 +371,17 @@
    "execution_count": null,
    "id": "d91255f1-80e5-494b-b74b-41c7be0a040e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "z-0\n",
-      "z-10\n",
-      "z-20\n",
-      "z-50\n",
-      "z-auto\n",
-      "-z-10\n",
-      "z-[999]\n",
-      "z-[999]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test z-index utilities\n",
-    "print(z(0))              # z-0\n",
-    "print(z(10))             # z-10\n",
-    "print(z(20))             # z-20\n",
-    "print(z(50))             # z-50\n",
-    "print(z.auto)            # z-auto\n",
-    "print(z.negative(10))    # -z-10\n",
-    "print(z(\"999\"))          # z-999 (string number without units)\n",
-    "print(z(\"[999]\"))        # z-[999] (explicit arbitrary value)"
+    "assert str(z(0)) == \"z-0\"\n",
+    "assert str(z(10)) == \"z-10\"\n",
+    "assert str(z(20)) == \"z-20\"\n",
+    "assert str(z(50)) == \"z-50\"\n",
+    "assert str(z.auto) == \"z-auto\"\n",
+    "assert str(z.negative(10)) == \"-z-10\"\n",
+    "assert str(z(\"999\")) == \"z-[999]\" # (string number without units)\n",
+    "assert str(z(\"[999]\")) == \"z-[999]\" # (explicit arbitrary value)"
    ]
   },
   {
@@ -621,26 +542,14 @@
    "execution_count": null,
    "id": "7ae43ac0-0e9c-4e5e-b7de-c3f679eb1a0e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "object-center\n",
-      "object-top\n",
-      "object-bottom-right\n",
-      "object-[50% 25%]\n",
-      "object-(--custom-position)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test object position utilities with dot notation\n",
-    "print(object_position.center)                      # object-center\n",
-    "print(object_position.top)                         # object-top\n",
-    "print(object_position.bottom_right)                # object-bottom-right\n",
-    "print(object_position(\"50% 25%\"))                  # object-[50% 25%]\n",
-    "print(object_position(\"--custom-position\"))        # object-(--custom-position)"
+    "assert object_position.center == \"object-center\"\n",
+    "assert object_position.top == \"object-top\"\n",
+    "assert object_position.bottom_right == \"object-bottom-right\"\n",
+    "assert object_position(\"50% 25%\") == \"object-[50% 25%]\"\n",
+    "assert object_position(\"--custom-position\") == \"object-(--custom-position)\""
    ]
   },
   {
@@ -782,28 +691,15 @@
    "execution_count": null,
    "id": "ea09b97e-8b3c-44bb-b831-72df791b86da",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "aspect-auto\n",
-      "aspect-square\n",
-      "aspect-video\n",
-      "aspect-16/9\n",
-      "aspect-4/3\n",
-      "aspect-(--custom)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test aspect ratio utilities with dot notation\n",
-    "print(aspect.auto)         # aspect-auto\n",
-    "print(aspect.square)       # aspect-square\n",
-    "print(aspect.video)        # aspect-video\n",
-    "print(aspect(\"16/9\"))      # aspect-16/9\n",
-    "print(aspect(\"4/3\"))       # aspect-4/3\n",
-    "print(aspect(\"--custom\"))  # aspect-(--custom)"
+    "assert aspect.auto == \"aspect-auto\"\n",
+    "assert aspect.square == \"aspect-square\"\n",
+    "assert aspect.video == \"aspect-video\"\n",
+    "assert aspect(\"16/9\") == \"aspect-16/9\"\n",
+    "assert aspect(\"4/3\") == \"aspect-4/3\"\n",
+    "assert aspect(\"--custom\") == \"aspect-(--custom)\""
    ]
   },
   {
@@ -846,40 +742,21 @@
    "execution_count": null,
    "id": "a1366be3-b288-4deb-8def-1fe300eadf18",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "columns-1\n",
-      "columns-2\n",
-      "columns-3\n",
-      "columns-auto\n",
-      "columns-xs\n",
-      "columns-sm\n",
-      "columns-lg\n",
-      "columns-3xl\n",
-      "columns-4xl\n",
-      "columns-5xl\n",
-      "columns-6xl\n",
-      "columns-7xl\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test columns utilities\n",
-    "print(columns(1))        # columns-1\n",
-    "print(columns(2))        # columns-2\n",
-    "print(columns(3))        # columns-3\n",
-    "print(columns.auto)      # columns-auto\n",
-    "print(columns.xs)        # columns-xs\n",
-    "print(columns.sm)        # columns-sm\n",
-    "print(columns.lg)        # columns-lg\n",
-    "print(columns._3xl)      # columns-3xl\n",
-    "print(columns._4xl)      # columns-4xl\n",
-    "print(columns._5xl)      # columns-5xl\n",
-    "print(columns._6xl)      # columns-6xl\n",
-    "print(columns._7xl)      # columns-7xl"
+    "assert str(columns(1)) == \"columns-1\"\n",
+    "assert str(columns(2)) == \"columns-2\"\n",
+    "assert str(columns(3)) == \"columns-3\"\n",
+    "assert str(columns.auto) == \"columns-auto\"\n",
+    "assert str(columns.xs) == \"columns-xs\"\n",
+    "assert str(columns.sm) == \"columns-sm\"\n",
+    "assert str(columns.lg) == \"columns-lg\"\n",
+    "assert str(columns._3xl) == \"columns-3xl\"\n",
+    "assert str(columns._4xl) == \"columns-4xl\"\n",
+    "assert str(columns._5xl) == \"columns-5xl\"\n",
+    "assert str(columns._6xl) == \"columns-6xl\"\n",
+    "assert str(columns._7xl) == \"columns-7xl\""
    ]
   },
   {
@@ -1047,22 +924,14 @@
    "execution_count": null,
    "id": "59899a4f-913a-4ab9-99db-372f47aa4d8c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Header classes: fixed top-0 left-0 right-0 z-50 bg-white\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Fixed header with z-index\n",
     "header = Header(\n",
     "    Nav(\"Navigation\"),\n",
     "    cls=combine_classes(position.fixed, top(0), left(0), right(0), z(50), \"bg-white\")\n",
     ")\n",
-    "print(f\"Header classes: {header.attrs['class']}\")"
+    "assert header.attrs['class'] == \"fixed top-0 left-0 right-0 z-50 bg-white\""
    ]
   },
   {
@@ -1070,22 +939,14 @@
    "execution_count": null,
    "id": "c0467ce9-075e-49c3-99a7-86cd2a28a490",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sidebar classes: sticky top-20 h-screen overflow-y-auto\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Sticky sidebar with scroll\n",
     "sidebar = Aside(\n",
     "    \"Sidebar content\",\n",
     "    cls=combine_classes(position.sticky, top(20), \"h-screen\", overflow.y.auto)\n",
     ")\n",
-    "print(f\"Sidebar classes: {sidebar.attrs['class']}\")"
+    "assert sidebar.attrs['class'] == \"sticky top-20 h-screen overflow-y-auto\""
    ]
   },
   {
@@ -1093,24 +954,15 @@
    "execution_count": null,
    "id": "4d7d6770-ef8d-4cea-8bef-1323c19f1260",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overlay classes: fixed inset-0 z-40 flex items-center justify-center bg-black/50\n",
-      "Modal classes: relative z-10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Modal overlay with z-index\n",
     "modal_overlay = Div(\n",
     "    Div(\"Modal content\", cls=combine_classes(position.relative, z(10))),\n",
     "    cls=combine_classes(position.fixed, inset(0), z(40), display.flex, \"items-center\", \"justify-center\", \"bg-black/50\")\n",
     ")\n",
-    "print(f\"Overlay classes: {modal_overlay.attrs['class']}\")\n",
-    "print(f\"Modal classes: {modal_overlay.children[0].attrs['class']}\")"
+    "assert modal_overlay.attrs['class'] == \"fixed inset-0 z-40 flex items-center justify-center bg-black/50\"\n",
+    "assert modal_overlay.children[0].attrs['class'] == \"relative z-10\""
    ]
   },
   {
@@ -1118,24 +970,15 @@
    "execution_count": null,
    "id": "a5c7777a-0e20-4ad6-b823-c48b987f04a8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Container classes: aspect-video overflow-hidden rounded-lg\n",
-      "Image classes: object-cover object-center w-full h-full\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Image with aspect ratio and object fit\n",
     "image_container = Div(\n",
     "    Img(src=\"image.jpg\", cls=combine_classes(object_fit.cover, object_position.center, \"w-full\", \"h-full\")),\n",
     "    cls=combine_classes(aspect.video, overflow.hidden, \"rounded-lg\")\n",
     ")\n",
-    "print(f\"Container classes: {image_container.attrs['class']}\")\n",
-    "print(f\"Image classes: {image_container.children[0].attrs['class']}\")"
+    "assert image_container.attrs['class'] == \"aspect-video overflow-hidden rounded-lg\"\n",
+    "assert image_container.children[0].attrs['class'] == \"object-cover object-center w-full h-full\""
    ]
   },
   {
@@ -1143,22 +986,14 @@
    "execution_count": null,
    "id": "9279bedc-4b96-4860-aa2d-11d7b4e87407",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Article classes: columns-2 gap-8 prose\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Multi-column layout\n",
     "article = Article(\n",
     "    \"Lorem ipsum dolor sit amet...\",\n",
     "    cls=combine_classes(columns(2), \"gap-8\", \"prose\")\n",
     ")\n",
-    "print(f\"Article classes: {article.attrs['class']}\")"
+    "assert article.attrs['class'] == \"columns-2 gap-8 prose\""
    ]
   },
   {
@@ -1240,24 +1075,13 @@
    "execution_count": null,
    "id": "6ae174cd-0472-4491-80c1-e0f103539cc8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2\n",
-      "relative z-20\n",
-      "sticky top-4\n",
-      "relative left-1/2 right-1/2 -mx-[50vw] w-screen\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test helper functions\n",
-    "print(center_absolute())\n",
-    "print(stack_context(20))\n",
-    "print(sticky_top(4))\n",
-    "print(full_bleed())"
+    "assert center_absolute() == \"absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2\"\n",
+    "assert stack_context(20) == \"relative z-20\"\n",
+    "assert sticky_top(4) == \"sticky top-4\"\n",
+    "assert full_bleed() == \"relative left-1/2 right-1/2 -mx-[50vw] w-screen\""
    ]
   },
   {
