--- a/nbs/utilities/spacing.ipynb
+++ b/nbs/utilities/spacing.ipynb
@@ -86,30 +86,17 @@
    "execution_count": null,
    "id": "2b73a984-378a-44b6-b6e1-f2b5ebab8267",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "p-0\n",
-      "p-4\n",
-      "p-8\n",
-      "p-2.5\n",
-      "p-px\n",
-      "p-auto\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Numeric scales\n",
-    "print(p(0))     # p-0\n",
-    "print(p(4))     # p-4 \n",
-    "print(p(8))     # p-8\n",
-    "print(p(2.5))   # p-2.5\n",
+    "assert str(p(0)) == \"p-0\"\n",
+    "assert str(p(4)) == \"p-4\"\n",
+    "assert str(p(8)) == \"p-8\"\n",
+    "assert str(p(2.5)) == \"p-2.5\"\n",
     "\n",
     "# Special values\n",
-    "print(p.px)     # p-px\n",
-    "print(p.auto)   # p-auto"
+    "assert str(p.px) == \"p-px\"\n",
+    "assert str(p.auto) == \"p-auto\""
    ]
   },
   {
@@ -127,30 +114,17 @@
    "execution_count": null,
    "id": "3464bf79-7cb1-417e-98b4-c4693c3e8516",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pt-4\n",
-      "pr-4\n",
-      "pb-4\n",
-      "pl-4\n",
-      "px-8\n",
-      "py-8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Individual sides\n",
-    "print(p.t(4))   # pt-4 (top)\n",
-    "print(p.r(4))   # pr-4 (right)\n",
-    "print(p.b(4))   # pb-4 (bottom)\n",
-    "print(p.l(4))   # pl-4 (left)\n",
+    "assert str(p.t(4)) == \"pt-4\" # (top)\n",
+    "assert str(p.r(4)) == \"pr-4\" # (right)\n",
+    "assert str(p.b(4)) == \"pb-4\" # (bottom)\n",
+    "assert str(p.l(4)) == \"pl-4\" # (left)\n",
     "\n",
     "# Horizontal and vertical\n",
-    "print(p.x(8))   # px-8 (left and right)\n",
-    "print(p.y(8))   # py-8 (top and bottom)"
+    "assert str(p.x(8)) == \"px-8\" # (left and right)\n",
+    "assert str(p.y(8)) == \"py-8\" # (top and bottom)"
    ]
   },
   {
@@ -158,20 +132,11 @@
    "execution_count": null,
    "id": "8w436x8mnn3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ps-4\n",
-      "pe-4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Logical properties (start/end instead of left/right)\n",
-    "print(ps(4))     # ps-4 (padding-inline-start)\n",
-    "print(pe(4))     # pe-4 (padding-inline-end)"
+    "assert str(ps(4)) == \"ps-4\" # (padding-inline-start)\n",
+    "assert str(pe(4)) == \"pe-4\" # (padding-inline-end)"
    ]
   },
   {
@@ -189,28 +154,16 @@
    "execution_count": null,
    "id": "5bc38ddc-aa74-4534-8dcf-3ef36e16ba0e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "p-[10px]\n",
-      "p-[2.5rem]\n",
-      "px-[calc(50% - 1rem)]\n",
-      "p-(--spacing-lg)\n",
-      "py-(--spacing-vertical)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Arbitrary values\n",
-    "print(p(\"10px\"))                  # p-[10px]\n",
-    "print(p(\"2.5rem\"))                # p-[2.5rem]\n",
-    "print(p.x(\"calc(50% - 1rem)\"))    # px-[calc(50% - 1rem)]\n",
+    "assert str(p(\"10px\")) == \"p-[10px]\"\n",
+    "assert str(p(\"2.5rem\")) == \"p-[2.5rem]\"\n",
+    "assert str(p.x(\"calc(50% - 1rem)\")) == \"px-[calc(50% - 1rem)]\"\n",
     "\n",
     "# Custom properties\n",
-    "print(p(\"--spacing-lg\"))          # p-(--spacing-lg)\n",
-    "print(p.y(\"--spacing-vertical\"))  # py-(--spacing-vertical)"
+    "assert str(p(\"--spacing-lg\")) == \"p-(--spacing-lg)\"\n",
+    "assert str(p.y(\"--spacing-vertical\")) == \"py-(--spacing-vertical)\""
    ]
   },
   {
@@ -253,30 +206,17 @@
    "execution_count": null,
    "id": "ac3f156b-997f-4c84-b90c-ac468df3397f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "m-0\n",
-      "m-4\n",
-      "m-8\n",
-      "m-2.5\n",
-      "m-px\n",
-      "m-auto\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Numeric scales\n",
-    "print(m(0))     # m-0\n",
-    "print(m(4))     # m-4\n",
-    "print(m(8))     # m-8\n",
-    "print(m(2.5))   # m-2.5\n",
+    "assert str(m(0)) == \"m-0\"\n",
+    "assert str(m(4)) == \"m-4\"\n",
+    "assert str(m(8)) == \"m-8\"\n",
+    "assert str(m(2.5)) == \"m-2.5\"\n",
     "\n",
     "# Special values\n",
-    "print(m.px)     # m-px\n",
-    "print(m.auto)   # m-auto"
+    "assert str(m.px) == \"m-px\"\n",
+    "assert str(m.auto) == \"m-auto\""
    ]
   },
   {
@@ -294,34 +234,20 @@
    "execution_count": null,
    "id": "f2c396e0-f609-403e-bd76-afccf7bc2222",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mt-4\n",
-      "mr-4\n",
-      "mb-4\n",
-      "ml-4\n",
-      "mx-8\n",
-      "my-8\n",
-      "mx-auto\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Individual sides\n",
-    "print(m.t(4))     # mt-4 (top)\n",
-    "print(m.r(4))     # mr-4 (right)\n",
-    "print(m.b(4))     # mb-4 (bottom)\n",
-    "print(m.l(4))     # ml-4 (left)\n",
+    "assert str(m.t(4)) == \"mt-4\" # (top)\n",
+    "assert str(m.r(4)) == \"mr-4\" # (right)\n",
+    "assert str(m.b(4)) == \"mb-4\" # (bottom)\n",
+    "assert str(m.l(4)) == \"ml-4\" # (left)\n",
     "\n",
     "# Horizontal and vertical\n",
-    "print(m.x(8))     # mx-8 (left and right)\n",
-    "print(m.y(8))     # my-8 (top and bottom)\n",
+    "assert str(m.x(8)) == \"mx-8\" # (left and right)\n",
+    "assert str(m.y(8)) == \"my-8\" # (top and bottom)\n",
     "\n",
     "# Auto for centering\n",
-    "print(m.x.auto)   # mx-auto (center horizontally)"
+    "assert str(m.x.auto) == \"mx-auto\" # (center horizontally)"
    ]
   },
   {
@@ -329,30 +255,17 @@
    "execution_count": null,
    "id": "iglx1ogebjr",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ms-4\n",
-      "me-4\n",
-      "ms-auto\n",
-      "me-auto\n",
-      "-ms-2\n",
-      "-me-2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Logical margin properties\n",
-    "print(ms(4))      # ms-4 (margin-inline-start)\n",
-    "print(me(4))      # me-4 (margin-inline-end)\n",
-    "print(ms.auto)    # ms-auto\n",
-    "print(me.auto)    # me-auto\n",
+    "assert str(ms(4)) == \"ms-4\" # (margin-inline-start)\n",
+    "assert str(me(4)) == \"me-4\" # (margin-inline-end)\n",
+    "assert str(ms.auto) == \"ms-auto\"\n",
+    "assert str(me.auto) == \"me-auto\"\n",
     "\n",
     "# Negative logical margins\n",
-    "print(ms.negative(2))  # -ms-2\n",
-    "print(me.negative(2))  # -me-2"
+    "assert str(ms.negative(2)) == \"-ms-2\"\n",
+    "assert str(me.negative(2)) == \"-me-2\""
    ]
   },
   {
@@ -370,34 +283,20 @@
    "execution_count": null,
    "id": "af93a7e0-7572-4405-b836-a2a2edbb2156",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-m-4\n",
-      "-mt-2\n",
-      "-m-4\n",
-      "-mt-2\n",
-      "-mx-8\n",
-      "-m-px\n",
-      "-my-px\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Negative values using negative=True\n",
-    "print(m(4, negative=True))        # -m-4\n",
-    "print(m.t(2, negative=True))      # -mt-2\n",
+    "assert str(m(4, negative=True)) == \"-m-4\"\n",
+    "assert str(m.t(2, negative=True)) == \"-mt-2\"\n",
     "\n",
     "# Negative values using .negative property\n",
-    "print(m.negative(4))              # -m-4\n",
-    "print(m.t.negative(2))            # -mt-2\n",
-    "print(m.x.negative(8))            # -mx-8\n",
+    "assert str(m.negative(4)) == \"-m-4\"\n",
+    "assert str(m.t.negative(2)) == \"-mt-2\"\n",
+    "assert str(m.x.negative(8)) == \"-mx-8\"\n",
     "\n",
     "# Negative special values\n",
-    "print(m.negative.px)              # -m-px\n",
-    "print(m.y.negative.px)            # -my-px"
+    "assert str(m.negative.px) == \"-m-px\"\n",
+    "assert str(m.y.negative.px) == \"-my-px\""
    ]
   },
   {
@@ -440,42 +339,25 @@
    "execution_count": null,
    "id": "d86e4eb8-412f-4d5b-9a1c-88e9c70f19ae",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "space-x-4\n",
-      "space-x-8\n",
-      "space-x-0\n",
-      "space-x-px\n",
-      "space-y-4\n",
-      "space-y-8\n",
-      "-space-x-2\n",
-      "-space-y-4\n",
-      "space-x-reverse\n",
-      "space-y-reverse\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Horizontal spacing between children\n",
-    "print(space.x(4))           # space-x-4\n",
-    "print(space.x(8))           # space-x-8\n",
-    "print(space.x(0))           # space-x-0\n",
-    "print(space.x.px)           # space-x-px\n",
+    "assert str(space.x(4)) == \"space-x-4\"\n",
+    "assert str(space.x(8)) == \"space-x-8\"\n",
+    "assert str(space.x(0)) == \"space-x-0\"\n",
+    "assert str(space.x.px) == \"space-x-px\"\n",
     "\n",
     "# Vertical spacing between children\n",
-    "print(space.y(4))           # space-y-4\n",
-    "print(space.y(8))           # space-y-8\n",
+    "assert str(space.y(4)) == \"space-y-4\"\n",
+    "assert str(space.y(8)) == \"space-y-8\"\n",
     "\n",
     "# Negative space (overlap children)\n",
-    "print(space.x.negative(2))  # -space-x-2\n",
-    "print(space.y.negative(4))  # -space-y-4\n",
+    "assert str(space.x.negative(2)) == \"-space-x-2\"\n",
+    "assert str(space.y.negative(4)) == \"-space-y-4\"\n",
     "\n",
     "# Space reverse utilities\n",
-    "print(space_x_reverse)      # space-x-reverse\n",
-    "print(space_y_reverse)      # space-y-reverse"
+    "assert space_x_reverse == \"space-x-reverse\"\n",
+    "assert space_y_reverse == \"space-y-reverse\""
    ]
   },
   {
@@ -503,17 +385,7 @@
    "execution_count": null,
    "id": "aca0dc9e-890e-401f-805e-81504c50d928",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Card classes: p-6 m-4\n",
-      "Title classes: pb-2\n",
-      "Button classes: px-4 py-2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Card component with padding\n",
     "card = Div(\n",
@@ -524,9 +396,9 @@
     ")\n",
     "\n",
     "# Show the generated classes\n",
-    "print(f\"Card classes: {card.attrs['class']}\")\n",
-    "print(f\"Title classes: {card.children[0].attrs['class']}\")\n",
-    "print(f\"Button classes: {card.children[2].attrs['class']}\")"
+    "assert card.attrs['class'] == \"p-6 m-4\"\n",
+    "assert card.children[0].attrs['class'] == \"pb-2\"\n",
+    "assert card.children[2].attrs['class'] == \"px-4 py-2\""
    ]
   },
   {
@@ -534,15 +406,7 @@
    "execution_count": null,
    "id": "f06050e0-b29c-4f0b-9af4-8c05ef4d7d85",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Header classes: p-4 -mb-8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Layout with negative margins\n",
     "overlap_layout = Div(\n",
@@ -551,7 +415,7 @@
     "    cls=m(4)\n",
     ")\n",
     "\n",
-    "print(f\"Header classes: {overlap_layout.children[0].attrs['class']}\")"
+    "assert overlap_layout.children[0].attrs['class'] == \"p-4 -mb-8\""
    ]
   },
   {
@@ -559,15 +423,7 @@
    "execution_count": null,
    "id": "1c700b0f-0b5d-49b6-a61d-e6a4f0ea4569",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Container classes: mx-auto p-8 max-w-4xl\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Centered container with auto margins\n",
     "centered_container = Div(\n",
@@ -575,7 +431,7 @@
     "    cls=combine_classes(m.x.auto, p(8), \"max-w-4xl\")\n",
     ")\n",
     "\n",
-    "print(f\"Container classes: {centered_container.attrs['class']}\")"
+    "assert centered_container.attrs['class'] == \"mx-auto p-8 max-w-4xl\""
    ]
   },
   {
@@ -676,29 +532,16 @@
    "execution_count": null,
    "id": "0bd54f2b-504b-47f9-b248-3827348c5689",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "p-4\n",
-      "px-8 py-4\n",
-      "px-6 pt-2 pb-4\n",
-      "m-4\n",
-      "mx-auto my-8\n",
-      "-mt-4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test helper functions\n",
-    "print(pad(4))                      # p-4\n",
-    "print(pad(x=8, y=4))              # px-8 py-4\n",
-    "print(pad(t=2, b=4, x=6))         # pt-2 pb-4 px-6\n",
+    "assert pad(4) == \"p-4\"\n",
+    "assert pad(x=8, y=4) == \"px-8 py-4\"\n",
+    "assert pad(t=2, b=4, x=6) == \"px-6 pt-2 pb-4\"\n",
     "\n",
-    "print(margin(4))                   # m-4\n",
-    "print(margin(x=\"auto\", y=8))      # mx-auto my-8\n",
-    "print(margin(t=4, negative=True)) # -mt-4"
+    "assert margin(4) == \"m-4\"\n",
+    "assert margin(x=\"auto\", y=8) == \"mx-auto my-8\"\n",
+    "assert margin(t=4, negative=True) == \"-mt-4\""
    ]
   },
   {
@@ -868,14 +711,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "adf95cb5-a2d1-4f98-b7ef-f1ddc58f13f2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a60e4359-83be-4768-9f5f-205039b3bf00",
    "metadata": {},
    "outputs": [],
    "source": []
