Update testing notebook with real example.

--- a/nbs/core/testing.ipynb
+++ b/nbs/core/testing.ipynb
@@ -85,7 +85,7 @@
     "    \n",
     "    # Create app with daisyUI configuration\n",
     "    app, rt = fast_app(\n",
-    "        pico=True,\n",
+    "        pico=False, # Disable pico since we're using Tailwind\n",
     "        hdrs=headers,\n",
     "        debug=debug\n",
     "    )\n",
@@ -186,7 +186,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71bfc4a7-0265-4833-b3a1-f08e8a530281",
+   "id": "45bddeae-fb1f-4072-9495-753210158102",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cjm_fasthtml_tailwind.core.base import combine_classes\n",
+    "from cjm_fasthtml_tailwind.utilities.flexbox_and_grid import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "801969b9-79f8-4f82-a9ff-a107347acf11",
    "metadata": {},
    "outputs": [
     {
@@ -239,13 +250,25 @@
     "    return create_test_page(\n",
     "        \"Tailwind Test Page\",\n",
     "        Div(\n",
-    "            H2(\"Test Abstractions\"),\n",
-    "            P(\"This is a test page for Tailwind abstractions.\", cls=None),\n",
-    "            Div(\n",
-    "                Button(\"Primary\"),\n",
-    "                Button(\"Secondary\"),\n",
-    "                Button(\"Accent\"),\n",
-    "                cls=None\n",
+    "            # Header spans full width\n",
+    "            Header(\"Dashboard\", cls=combine_classes(col_span.full, \"p-4 bg-blue-500 text-white\")),\n",
+    "            \n",
+    "            # Sidebar\n",
+    "            Aside(\"Sidebar\", cls=combine_classes(row_span(2), \"p-4 bg-gray-200\")),\n",
+    "            \n",
+    "            # Main content\n",
+    "            Main(\"Main Content\", cls=combine_classes(col_span(2), \"p-4\")),\n",
+    "            \n",
+    "            # Stats cards\n",
+    "            Div(\"Stat 1\", cls=\"p-4 bg-green-100\"),\n",
+    "            Div(\"Stat 2\", cls=\"p-4 bg-yellow-100\"),\n",
+    "            \n",
+    "            cls=combine_classes(\n",
+    "                \"grid\",\n",
+    "                grid_cols(3),\n",
+    "                grid_rows(3),\n",
+    "                gap(4),\n",
+    "                \"h-screen\"\n",
     "            )\n",
     "        )\n",
     "    )\n",
@@ -258,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64d1dc63-5406-41f7-a9f4-28f1da9ae4cf",
+   "id": "260c3999-2564-4916-870f-107eb686769f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,38 +289,6 @@
     "# Stop the server when done\n",
     "server.stop()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1294fb50-8592-4f4e-8161-b5269c88ae69",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "45bddeae-fb1f-4072-9495-753210158102",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b1a9392f-5a0f-4e65-ba66-0770070bbda9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "801969b9-79f8-4f82-a9ff-a107347acf11",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -311,22 +302,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "258536c5-3377-492b-b40b-3f04a771d9ca",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "701be50e-313e-4d36-82c5-c95aeab67110",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5cdf1665-3101-433e-b58d-3df1c14d5ddf",
    "metadata": {},
    "outputs": [],
    "source": []
