--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -62,18 +62,20 @@
     "    utilities_spacing[utilities.spacing<br/>spacing]\n",
     "\n",
     "    builders_scales --> core_base\n",
+    "    core_testing --> core_base\n",
     "    core_testing --> core_resources\n",
+    "    core_testing --> utilities_flexbox_and_grid\n",
     "    utilities_flexbox_and_grid --> core_base\n",
     "    utilities_flexbox_and_grid --> builders_scales\n",
-    "    utilities_layout --> core_base\n",
     "    utilities_layout --> builders_scales\n",
-    "    utilities_sizing --> builders_scales\n",
+    "    utilities_layout --> core_base\n",
     "    utilities_sizing --> core_base\n",
-    "    utilities_spacing --> builders_scales\n",
+    "    utilities_sizing --> builders_scales\n",
     "    utilities_spacing --> core_base\n",
+    "    utilities_spacing --> builders_scales\n",
     "```\n",
     "\n",
-    "*10 cross-module dependencies detected*"
+    "*12 cross-module dependencies detected*"
    ]
   },
   {
